kubernetes/teams/myteam/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-myteam
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    team: myteam
    cost-center: myteam
    managed-by: idp-backstage
